responsive overflow fix

--- a/css/index.scss
+++ b/css/index.scss
@@ -23,6 +23,8 @@ $teal3: #008673;
 $purple1: #BF93EB;
 $purple2: #8B5BDC;
 
+$bg-icons-width: 51.5rem;
+
 body {
 	color: $gray6;
 	-webkit-font-smoothing: antialiased;
@@ -34,6 +36,7 @@ body {
 	margin: 0 auto;
 	padding: 1rem 15px;
 	max-width: 79rem;
+	overflow: hidden;
 }
 
 h2 {
@@ -1062,8 +1065,9 @@ footer {
 		font-size: 15px;
 	}
 
+	$container-width: 37rem;
 	.container {
-		max-width: 37em;
+		max-width: $container-width;
 	}
 
 	nav {
@@ -1083,6 +1087,15 @@ footer {
 
 					div {
 						flex: 0 0 100%;
+					}
+				}
+
+				#bg-icons {
+					width: $container-width;
+					left: $container-width - $bg-icons-width + 2.5rem;
+
+					.bg-icon-wrapper:nth-of-type(2), .bg-icon-wrapper:nth-of-type(3), .bg-icon-wrapper:nth-of-type(15), .bg-icon-wrapper:nth-of-type(16) {
+						visibility: hidden;
 					}
 				}
 			}
